test/2-error/label-extraneous.ploy
f = fn (Int Int)%Int add_Int.$;

main = exit.f(i=0 j=0)
